--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,10 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
 
-
-//    //noinspection GradleCompatible
-//    implementation 'com.android.support:support-core-utils:28.0.0'
-
+    //BD
+    def room_version = "2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
 
 }
