--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+
 
     implementation 'com.google.android.material:material:1.4.0'
 
@@ -52,5 +51,32 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
+
+
+    //HTTP
+    def okhttp3_version = "3.10.0"
+    def retrofit2_version = "2.3.0"
+//    def retrofit2_version = "2.6.0"
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit2_version"
+    implementation ("com.squareup.retrofit2:converter-simplexml:2.3.0"){
+//        exclude group: "xpp3", module: "xpp3"
+        exclude group: "stax", module: "stax-api"
+        exclude group: "stax", module: "stax"
+
+    }
+
+    implementation "com.google.code.gson:gson:2.8.5"
+    //окхттп уже есть в ретрофите. его можно не устанавливать
+    implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
+    //для логирования
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
+
+
+    //RX
+    implementation "io.reactivex.rxjava2:rxjava:2.2.21"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+
 
 }
