--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-            android:name=".data.db.AppDelegate"
+            android:name=".data.local.AppDelegate"
 
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
